install autoscaler, and no, really, add the bloody lock file

--- a/example.env
+++ b/example.env
@@ -1,1 +1,3 @@
 SESSION_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+HEROKU_ACCESS_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+HEROKU_APP=sqrl-check-web
